Fix bug burger-menu

--- a/index.html
+++ b/index.html
@@ -97,13 +97,12 @@
       </button>
     </div>
     <aside
-      class="burger-menu flex column align-center white-text light-black absolute"
+      class="burger-menu flex column align-center white-text light-black absolute hidden"
     >
       <h2 class="title-option-fontsize">Options</h2>
       <hr class="horizontal-line white" />
       <form
         class="form-burger flex column submenu-fontsize"
-        action="./action.php"
         method="get"
       >
         <div class="flex column">
