--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <form
         class="form-burger flex column submenu-fontsize"
         method="get"
+        id="form-burger"
       >
         <div class="flex column">
           <section class="line flex justify-between">
