Change size form buttons

--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@ Milestone achieved!
               </div>
             </div>
           </section>
-          <div
-            class="container-form-buttons small-fontsize flex justify-between absolute"
-          >
+          <div class="container-form-buttons flex justify-between absolute">
             <input
               class="options-button white touch opacity"
               type="submit"
