--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="input-form white text-center"
+                    class="outline input-form white text-center"
                     id="f-minutes"
                     value="15"
                     type="number"
@@ -126,7 +126,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="input-form white text-center"
+                    class="outline input-form white text-center"
                     id="f-seconds"
                     value="0"
                     type="number"
@@ -144,7 +144,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="input-form white text-center"
+                    class="outline input-form white text-center"
                     id="s-minutes"
                     value="20"
                     type="number"
@@ -155,7 +155,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="input-form white text-center"
+                    class="outline input-form white text-center"
                     id="s-seconds"
                     value="0"
                     type="number"
@@ -180,7 +180,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="input-form white text-center disabled"
+                  class="outline input-form white text-center disabled"
                   id="w-points"
                   value="20"
                   min="1"
@@ -209,7 +209,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="input-form white text-center disabled"
+                  class="outline input-form white text-center disabled"
                   id="t-points"
                   value="7"
                   min="1"
@@ -226,8 +226,9 @@
               <div class="flex column">
                 <textarea
                   disabled
-                  class="disabled max-width unresizable white text-left"
+                  class="outline disabled max-width unresizable white text-left"
                   id="t-message"
+                  maxlength="100"
                 >
 Milestone achieved!
                 </textarea>
