--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           alt="Reset button"
         />
       </button>
+      <div class="alert white absolute submenu-fontsize" id="alert">Lorem ipsum</div>
       <div
         id="timer"
         class="white-text flex justify-center align-center max-width max-height"
