Add style to winner message and change yellow

--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
       <div
         class="alert flex justify-center align-center white absolute submenu-fontsize"
         id="alert"
-      >Lorem ipsum</div>
+      >
+      <div class="white tiny-square">
+      </div>&nbsp;
+      <div class="title-option-fontsize">&#10140;&nbsp;20</div>
+    </div>
       <div
         id="timer"
         class="white-text flex justify-center align-center max-width max-height"
