Improve alert queue behaviour

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         />
       </button>
       <div
-        class="alert flex justify-center align-center white absolute submenu-fontsize"
-        id="alert"
+        class="alert-container max-width max-height absolute"
+        id="alert-container"
       >
     </div>
       <div
@@ -235,7 +235,7 @@
                   disabled
                   class="outline flex align-center disabled max-width white text-left"
                   id="t-message"
-                  maxlength="50"
+                  maxlength="53"
                 >
                 </textarea>
                 <label
