Add description and PWA tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <!DOCTYPE html>
 <html lang="en" class="flex column max-height">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Colorful counter to quantify scores of different teams with a timer" />
+    <meta name="theme-color" content="#0f0e0e" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <link rel="apple-touch-icon" href="./img/pwa/icons/reoneo_icon_1024x1024" />
+    <link rel="apple-touch-icon-precomposed" href="./img/pwa/icons/reoneo_icon_1024x1024" />
+    <link rel="apple-touch-startup-image" href="./img/pwa/icons/reoneo_icon_1024x1024" />
+    <link rel="manifest" href="./manifest.json">
     <title>Reoneo</title>
-    <link rel="icon" href="./img/favicon.png">
+    <link rel="shortcut icon" href="./img/favicon.png">
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/fonts.css" />
