Convert all images to webp

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <link rel="apple-touch-icon" href="./img/pwa/icons/reoneo_icon_1024x1024" />
-    <link rel="apple-touch-icon-precomposed" href="./img/pwa/icons/reoneo_icon_1024x1024" />
-    <link rel="apple-touch-startup-image" href="./img/pwa/icons/reoneo_icon_1024x1024" />
+    <link rel="apple-touch-icon" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
+    <link rel="apple-touch-icon-precomposed" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
+    <link rel="apple-touch-startup-image" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
     <link rel="manifest" href="./manifest.json">
     <title>Reoneo</title>
-    <link rel="shortcut icon" href="./img/favicon.png">
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/fonts.css" />
-    <link rel="stylesheet" href="css/position.css" />
-    <link rel="stylesheet" href="css/responsive.css" />
-    <script type="module" src="js/main.js"></script>
+    <link rel="shortcut icon" href="./img/favicon.webp">
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/fonts.css" />
+    <link rel="stylesheet" href="./css/position.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
+    <script type="module" src="./js/main.js"></script>
   </head>
   <body class="flex column anton max-width max-height overflow-hidden">
     <input
@@ -279,7 +279,7 @@
           <a href="https://github.com/j-alarcon" target="_blank">
             <img
               class="penguin-logo touch opacity"
-              src="./img/logos/penguin_white.png"
+              src="./img/logos/penguin_white.webp"
               alt=""
             />
           </a>
