--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!-- https://github.com/j-alarcon -->
 <!DOCTYPE html>
-<html lang="en" class="flex column max-height">
+<html lang="en" class="flex column max-height" translate="no">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Colorful counter to quantify scores of different teams with a timer" />
+    <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#439318" />
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
