Add download scores option

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <input
                   id="winner"
                   type="checkbox"
-                  class="mode light-red hidden-webstyles"
+                  class="mode checkbox light-red hidden-webstyles"
                 />
                 <label for="winner">Winner mode</label>
               </div>
@@ -220,7 +220,7 @@
                 <input
                   id="total"
                   type="checkbox"
-                  class="mode light-red hidden-webstyles"
+                  class="mode checkbox light-red hidden-webstyles"
                 />
                 <label for="total">Total mode</label>
               </div>
@@ -257,6 +257,18 @@
                   class="disabled small-fontsize"
                   >Custom text</label
                 >
+              </div>
+            </div>
+          </section>
+          <section class="line">
+            <div class="container-section flex column justify-center">
+              <div class="subcontainer-form flex align-center">
+                <input
+                  id="download"
+                  type="checkbox"
+                  class="checkbox light-red hidden-webstyles"
+                />
+                <label for="download">Download scores when the timer runs out</label>
               </div>
             </div>
           </section>
