--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- https://github.com/j-alarcon -->
 <!DOCTYPE html>
-<html lang="en" class="flex column max-height" translate="no">
+<html lang="en" class="flex column max-height">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
