--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <a href="https://github.com/j-alarcon" target="_blank">
             <img
               class="penguin-logo touch opacity"
-              src="./img/logos/penguin_white.webp"
+              src="./img/logos/penguin_white.png"
               alt=""
             />
           </a>
