--- a/index.html
+++ b/index.html
@@ -289,10 +289,11 @@
         <div
           class="extra-data-container flex justify-between align-center absolute"
         >
+          <a href="https://github.com/j-alarcon">
             <img
               class="penguin-logo touch opacity"
               src="./img/logos/penguin_white.png"
-              alt=""
+              alt="White penguin in a suit"
             />
           </a>
           <hr class="vertical-line white" />
