Increase font-size

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label for="winner">Winner mode</label>
+                <label class="subtitle-option-fontsize" for="winner">Winner mode</label>
               </div>
               <div class="flex align-center">
                 <input
@@ -222,7 +222,7 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label for="total">Total mode</label>
+                <label class="subtitle-option-fontsize" for="total">Total mode</label>
               </div>
               <div class="flex align-center">
                 <input
@@ -268,7 +268,7 @@
                   type="checkbox"
                   class="checkbox light-red hidden-webstyles"
                 />
-                <label for="download">Download scores when the timer runs out</label>
+                <label class="subtitle-option-fontsize" for="download">Download scores</label>
               </div>
             </div>
           </section>
