--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <aside
       class="burger-menu flex column align-center white-text light-black absolute hidden"
     >
-      <h2 class="title-option-fontsize">Options</h2>
+      <h2 class="title-option-fontsize translate">Options</h2>
       <hr class="horizontal-line white" />
       <form
         class="form-burger flex column submenu-fontsize"
@@ -127,7 +127,7 @@
         <div class="flex column">
           <section class="line flex justify-between">
             <div class="flex column">
-              <label class="subtitle-option-fontsize" for="first-timer"
+              <label class="subtitle-option-fontsize translate" for="first-timer"
                 >First-timer</label
               >
               <div class="input-form-container flex align-center">
@@ -140,7 +140,7 @@
                     min="0"
                     max="99"
                   />
-                  <label for="f-minutes" class="small-fontsize">Minutes</label>
+                  <label for="f-minutes" class="small-fontsize translate">Minutes</label>
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
@@ -151,12 +151,12 @@
                     min="0"
                     max="99"
                   />
-                  <label for="f-seconds" class="small-fontsize">Seconds</label>
+                  <label for="f-seconds" class="small-fontsize translate">Seconds</label>
                 </div>
               </div>
             </div>
             <div class="flex column">
-              <label class="subtitle-option-fontsize" for="first-timer"
+              <label class="subtitle-option-fontsize translate" for="first-timer"
                 >Second-timer</label
               >
               <div class="input-form-container flex align-center">
@@ -169,7 +169,7 @@
                     min="0"
                     max="99"
                   />
-                  <label for="s-minutes" class="small-fontsize">Minutes</label>
+                  <label for="s-minutes" class="small-fontsize translate">Minutes</label>
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
@@ -180,7 +180,7 @@
                     min="0"
                     max="99"
                   />
-                  <label for="s-seconds" class="small-fontsize">Seconds</label>
+                  <label for="s-seconds" class="small-fontsize translate">Seconds</label>
                 </div>
               </div>
             </div>
@@ -193,7 +193,7 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label class="subtitle-option-fontsize" for="winner">Winner mode</label>
+                <label class="subtitle-option-fontsize translate" for="winner">Winner mode</label>
               </div>
               <div class="flex align-center">
                 <input
@@ -206,7 +206,7 @@
                   type="number"
                 />
                 <label
-                  class="subtitle-side small-fontsize disabled"
+                  class="subtitle-side small-fontsize disabled translate"
                   for="w-points"
                   id="label-w"
                   >Points</label
@@ -222,7 +222,7 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label class="subtitle-option-fontsize" for="total">Total mode</label>
+                <label class="subtitle-option-fontsize translate" for="total">Total mode</label>
               </div>
               <div class="flex align-center">
                 <input
@@ -235,7 +235,7 @@
                   type="number"
                 />
                 <label
-                  class="subtitle-side small-fontsize disabled"
+                  class="subtitle-side small-fontsize disabled translate"
                   for="t-points"
                   id="label-t"
                   >Points</label
@@ -254,7 +254,7 @@
                 <label
                   for="message"
                   id="label-msg"
-                  class="disabled small-fontsize"
+                  class="disabled small-fontsize translate"
                   >Custom text</label
                 >
               </div>
@@ -268,19 +268,19 @@
                   type="checkbox"
                   class="checkbox light-red hidden-webstyles"
                 />
-                <label class="subtitle-option-fontsize" for="download">Download scores</label>
+                <label class="subtitle-option-fontsize translate" for="download">Download scores</label>
               </div>
             </div>
           </section>
-          <div class="container-form-buttons flex justify-between absolute">
+          <div class="container-form-buttons flex justify-center absolute">
             <input
-              class="options-button white touch opacity"
+              class="options-button white touch opacity translate"
               type="submit"
-              value="Apply"
+              value="Save"
               id="submit-changes"
             />
             <input
-              class="options-button white touch opacity"
+              class="options-button white touch opacity translate"
               type="reset"
               value="Reset"
             />
@@ -298,8 +298,8 @@
           </a>
           <hr class="vertical-line white" />
           <div class="small-fontsize">
-            <p>Version 1.0</p>
-            <p>06/15/2022</p>
+            <p class="translate">Version 1.0</p>
+            <p class="translate">06/15/2022</p>
           </div>
         </div>
       </form>
