Change default value total mode

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <div class="flex column">
                 <input  
                   type="text"
-                  value="Milestone achieved!"
+                  value="🎉🚩🥳🔥"
                   disabled
                   class="outline flex align-center disabled max-width white text-left"
                   id="t-message"
