Modify spanish and french sentences

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <section class="line flex justify-between">
             <div class="flex column">
               <label class="subtitle-option-fontsize translate" for="first-timer"
-                >First-timer</label
+                >1st timer</label
               >
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
@@ -157,7 +157,7 @@
             </div>
             <div class="flex column">
               <label class="subtitle-option-fontsize translate" for="first-timer"
-                >Second-timer</label
+                >2nd timer</label
               >
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
