--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="flex column max-height" id="language">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta name="description" content="Colorful counter to quantify scores of different teams with a timer" />
     <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#161618" />
