--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           <a href="https://github.com/j-alarcon">
             <img
               class="penguin-logo touch opacity"
-              src="./img/logos/penguin_white.png"
+              src="./img/logos/penguin_white.webp"
               alt="White penguin in a suit"
             />
           </a>
