--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           class="reset-icon"
           src="./img/icons/reset.svg"
           alt="Reset button"
+          width="23.5px"
+          height="22.25px"
         />
       </button>
       <div
@@ -66,6 +68,8 @@
             class="icon-submenu"
             src="./img/icons/minus.svg"
             alt="Minus Button"
+            width="22.55px"
+            height="22.55px"
           />
         </button>
         <button class="flex justify-center align-center opacity touch" id="add">
@@ -73,6 +77,8 @@
             class="icon-submenu"
             src="./img/icons/plus.svg"
             alt="Plus Button"
+            width="22.55px"
+            height="22.55px"
           />
         </button>
         <button
@@ -95,6 +101,8 @@
             class="icon-submenu"
             src="./img/icons/play.svg"
             alt="Play button"
+            width="22.55px"
+            height="22.55px"
           />
         </button>
       </div>
@@ -110,6 +118,8 @@
             class="burger-icon"
             src="./img/icons/burger.svg"
             alt="Burger button"
+            width="28.19px"
+            height="24.03px"
           />
         </label>
       </button>
