--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/position.css" />
     <link rel="stylesheet" href="./css/responsive.css" />
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/main.js" defer></script>
   </head>
   <body class="flex column anton max-width max-height overflow-hidden">
     <input
