--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div
           class="extra-data-container flex justify-between align-center absolute"
         >
-          <a href="https://github.com/j-alarcon">
+          <a href="https://github.com/j-alarcon" target="_blank">
             <img
               class="penguin-logo touch opacity"
               src="./img/logos/penguin_white.webp"
