--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
           alt="Reset button"
         />
       </button>
+      <button
+        class="edit flex justify-center align-center absolute opacity touch"
+        id="edit"
+      >
+        <img
+          class="edit-icon"
+          src="./img/icons/reset.svg"
+          alt="Edit button"
+        />
+      </button>
       <div
         class="alert-container max-width max-height absolute"
         id="alert-container"
