Improve options menu

--- a/index.html
+++ b/index.html
@@ -274,6 +274,18 @@
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
                 <input
+                  id="showNames"
+                  type="checkbox"
+                  class="checkbox light-red hidden-webstyles"
+                />
+                <label class="subtitle-option-fontsize translate" for="showNames">Show names</label>
+              </div>
+            </div>
+          </section>
+          <section class="line">
+            <div class="container-section flex column justify-center">
+              <div class="subcontainer-form flex align-center">
+                <input
                   id="download"
                   type="checkbox"
                   class="checkbox light-red hidden-webstyles"
