--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <input
                   id="showNames"
                   type="checkbox"
-                  class="checkbox light-red hidden-webstyles"
+                  class="checkbox light-red hidden-webstyles extramode"
                 />
                 <label class="subtitle-option-fontsize translate" for="showNames">Show names</label>
               </div>
@@ -288,7 +288,7 @@
                 <input
                   id="download"
                   type="checkbox"
-                  class="checkbox light-red hidden-webstyles"
+                  class="checkbox light-red hidden-webstyles extramode"
                 />
                 <label class="subtitle-option-fontsize translate" for="download">Download scores</label>
               </div>
