--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       >
         <img
           class="edit-icon"
-          src="./img/icons/reset.svg"
+          src="./img/icons/edit.svg"
           alt="Edit button"
         />
       </button>
