Fix footer options

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             />
           </a>
           <hr class="vertical-line white" />
-          <div class="small-fontsize">
+          <div class="text-data-container small-fontsize">
             <p class="translate">Version 1.2</p>
             <p class="translate">09/07/2022</p>
           </div>
