--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name="description" content="Colorful counter to quantify scores of different teams with a timer" />
+    <meta
+      name="description"
+      content="Colorful counter to quantify scores of different teams with a timer"
+    />
     <meta name="google" content="notranslate" />
     <meta name="theme-color" content="#161618" />
     <meta name="MobileOptimized" content="width" />
     <meta name="HandheldFriendly" content="true" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <link rel="apple-touch-icon" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
-    <link rel="apple-touch-icon-precomposed" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
-    <link rel="apple-touch-startup-image" href="./img/pwa/icons/reoneo_icon_1024x1024.png" />
-    <link rel="manifest" href="./manifest.json">
+    <link
+      rel="apple-touch-icon"
+      href="./img/pwa/icons/reoneo_icon_1024x1024.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      href="./img/pwa/icons/reoneo_icon_1024x1024.png"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="./img/pwa/icons/reoneo_icon_1024x1024.png"
+    />
+    <link rel="manifest" href="./manifest.json" />
     <title>Reoneo</title>
-    <link rel="shortcut icon" href="./img/favicon.webp">
+    <link rel="shortcut icon" href="./img/favicon.webp" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
@@ -47,17 +59,12 @@
         class="edit flex justify-center align-center absolute opacity touch"
         id="edit"
       >
-        <img
-          class="edit-icon"
-          src="./img/icons/edit.svg"
-          alt="Edit button"
-        />
+        <img class="edit-icon" src="./img/icons/edit.svg" alt="Edit button" />
       </button>
       <div
         class="alert-container max-width max-height absolute"
         id="alert-container"
-      >
-    </div>
+      ></div>
       <div
         id="timer"
         class="white-text flex justify-center align-center max-width max-height"
@@ -137,7 +144,9 @@
         <div class="flex column">
           <section class="line flex justify-between">
             <div class="flex column">
-              <label class="subtitle-option-fontsize translate" for="first-timer"
+              <label
+                class="subtitle-option-fontsize translate"
+                for="first-timer"
                 >1st timer</label
               >
               <div class="input-form-container flex align-center">
@@ -150,7 +159,9 @@
                     min="0"
                     max="99"
                   />
-                  <label for="f-minutes" class="small-fontsize translate">Minutes</label>
+                  <label for="f-minutes" class="small-fontsize translate"
+                    >Minutes</label
+                  >
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
@@ -161,12 +172,16 @@
                     min="0"
                     max="99"
                   />
-                  <label for="f-seconds" class="small-fontsize translate">Seconds</label>
+                  <label for="f-seconds" class="small-fontsize translate"
+                    >Seconds</label
+                  >
                 </div>
               </div>
             </div>
             <div class="flex column">
-              <label class="subtitle-option-fontsize translate" for="first-timer"
+              <label
+                class="subtitle-option-fontsize translate"
+                for="first-timer"
                 >2nd timer</label
               >
               <div class="input-form-container flex align-center">
@@ -179,7 +194,9 @@
                     min="0"
                     max="99"
                   />
-                  <label for="s-minutes" class="small-fontsize translate">Minutes</label>
+                  <label for="s-minutes" class="small-fontsize translate"
+                    >Minutes</label
+                  >
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
@@ -190,7 +207,9 @@
                     min="0"
                     max="99"
                   />
-                  <label for="s-seconds" class="small-fontsize translate">Seconds</label>
+                  <label for="s-seconds" class="small-fontsize translate"
+                    >Seconds</label
+                  >
                 </div>
               </div>
             </div>
@@ -203,7 +222,9 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label class="subtitle-option-fontsize translate" for="winner">Winner mode</label>
+                <label class="subtitle-option-fontsize translate" for="winner"
+                  >Winner mode</label
+                >
               </div>
               <div class="flex align-center">
                 <input
@@ -232,7 +253,9 @@
                   type="checkbox"
                   class="mode checkbox light-red hidden-webstyles"
                 />
-                <label class="subtitle-option-fontsize translate" for="total">Total mode</label>
+                <label class="subtitle-option-fontsize translate" for="total"
+                  >Total mode</label
+                >
               </div>
               <div class="flex align-center">
                 <input
@@ -252,15 +275,14 @@
                 >
               </div>
               <div class="flex column">
-                <input  
+                <input
                   type="text"
                   value="🎉🚩🥳🔥"
                   disabled
                   class="outline flex align-center disabled max-width white text-left"
                   id="t-message"
                   maxlength="53"
-                >
-                </textarea>
+                />
                 <label
                   for="message"
                   id="label-msg"
@@ -278,7 +300,11 @@
                   type="checkbox"
                   class="checkbox light-red hidden-webstyles extramode"
                 />
-                <label class="subtitle-option-fontsize translate" for="showNames">Show names</label>
+                <label
+                  class="subtitle-option-fontsize translate"
+                  for="showNames"
+                  >Show names</label
+                >
               </div>
             </div>
           </section>
@@ -290,7 +316,9 @@
                   type="checkbox"
                   class="checkbox light-red hidden-webstyles extramode"
                 />
-                <label class="subtitle-option-fontsize translate" for="download">Download scores</label>
+                <label class="subtitle-option-fontsize translate" for="download"
+                  >Download scores</label
+                >
               </div>
             </div>
           </section>
