--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h2 class="title-option-fontsize translate">Options</h2>
       <hr class="horizontal-line white" />
       <form
-        class="form-burger flex column submenu-fontsize"
+        class="form-burger flex column formdata-fontsize"
         method="get"
         id="form-burger"
       >
