--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
     <link rel="manifest" href="./manifest.json" />
     <title>Reoneo</title>
-    <link rel="shortcut icon" href="./img/favicon.webp" />
+    <link rel="shortcut icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/fonts.css" />
