Reduce size font inputs

--- a/index.html
+++ b/index.html
@@ -342,7 +342,11 @@
         <div
           class="extra-data-container flex justify-between align-center absolute"
         >
-          <a href="https://github.com/j-alarcon" target="_blank" rel="noreferrer">
+          <a
+            href="https://github.com/j-alarcon"
+            target="_blank"
+            rel="noreferrer"
+          >
             <img
               class="penguin-logo touch opacity"
               src="./img/logos/penguin_white.webp"
