Change penguin logo

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           >
             <img
               class="penguin-logo touch opacity"
-              src="./img/logos/white_penguin.webp"
+              src="./img/logos/white_penguin_64x64.png"
               alt="White penguin in a suit"
             />
           </a>
