--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
           >
             <img
               class="penguin-logo touch opacity"
-              src="./img/logos/white_penguin.png"
+              srcset="./img/logos/white_penguin.png"
+              sizes="128px"
               alt="White penguin in a suit"
             />
           </a>
