--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
           class="extra-data-container flex justify-between align-center absolute"
         >
           <a
-            href="https://github.com/j-alarcon"
+            href="https://yarduon.com"
             target="_blank"
             rel="noreferrer"
           >
