Add max length to number inputs

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center"
+                    class="outline input-form white text-center time"
                     id="f-minutes"
                     value="15"
                     type="number"
@@ -168,7 +168,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center"
+                    class="outline input-form white text-center time"
                     id="f-seconds"
                     value="0"
                     type="number"
@@ -190,7 +190,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center"
+                    class="outline input-form white text-center time"
                     id="s-minutes"
                     value="20"
                     type="number"
@@ -203,7 +203,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center"
+                    class="outline input-form white text-center time"
                     id="s-seconds"
                     value="0"
                     type="number"
@@ -232,7 +232,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="outline input-form white text-center disabled"
+                  class="outline input-form white text-center points disabled"
                   id="w-points"
                   value="20"
                   min="1"
@@ -263,7 +263,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="outline input-form white text-center disabled"
+                  class="outline input-form white text-center points disabled"
                   id="t-points"
                   value="7"
                   min="1"
