Add loading screen

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <script type="module" src="./js/main.js" defer></script>
   </head>
   <body class="flex column anton max-width max-height overflow-hidden">
+     <div
+      class="initial-screen max-width max-height absolute white"
+      id="initial-screen"
+    ></div>
     <input
       class="burger-checkbox absolute"
       type="checkbox"
