Fix initial screen

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <script type="module" src="./js/main.js" defer></script>
   </head>
   <body class="flex column anton max-width max-height overflow-hidden">
-     <div
-      class="initial-screen max-width max-height absolute white"
+    <div
+      class="initial-screen max-width max-height absolute light-black"
       id="initial-screen"
     ></div>
     <input
@@ -346,11 +346,7 @@
         <div
           class="extra-data-container flex justify-between align-center absolute"
         >
-          <a
-            href="https://yarduon.com"
-            target="_blank"
-            rel="noreferrer"
-          >
+          <a href="https://yarduon.com" target="_blank" rel="noreferrer">
             <img
               class="penguin-logo touch opacity"
               srcset="./img/logos/white_penguin_128x128.png"
