--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </div>
       <button
-        class="radius-button white flex justify-center align-center absolute opacity"
+        class="radius-button dark-grey flex justify-center align-center absolute opacity"
         id="burger-button"
       >
         <label
@@ -142,7 +142,7 @@
       class="burger-menu flex column align-center white-text light-black absolute hidden"
     >
       <h2 class="title-option-fontsize translate">Options</h2>
-      <hr class="horizontal-line white" />
+      <hr class="horizontal-line light-grey" />
       <form
         class="form-burger flex column formdata-fontsize"
         method="get"
@@ -159,7 +159,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center time"
+                    class="outline input-form white-text grey text-center time"
                     id="f-minutes"
                     value="15"
                     type="number"
@@ -172,7 +172,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center time"
+                    class="outline input-form white-text grey text-center time"
                     id="f-seconds"
                     value="0"
                     type="number"
@@ -194,7 +194,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center time"
+                    class="outline input-form white-text grey text-center time"
                     id="s-minutes"
                     value="20"
                     type="number"
@@ -207,7 +207,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="outline input-form white text-center time"
+                    class="outline input-form white-text grey text-center time"
                     id="s-seconds"
                     value="0"
                     type="number"
@@ -236,7 +236,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="outline input-form white text-center points disabled"
+                  class="outline input-form white-text grey text-center points disabled"
                   id="w-points"
                   value="20"
                   min="1"
@@ -267,7 +267,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="outline input-form white text-center points disabled"
+                  class="outline input-form white-text grey text-center points disabled"
                   id="t-points"
                   value="7"
                   min="1"
@@ -286,7 +286,7 @@
                   type="text"
                   value="🎉🚩🥳🔥"
                   disabled
-                  class="outline flex align-center disabled max-width white text-left"
+                  class="outline flex align-center white-text grey disabled max-width white text-left"
                   id="t-message"
                   maxlength="53"
                 />
@@ -331,13 +331,13 @@
           </section>
           <div class="container-form-buttons flex justify-center absolute">
             <input
-              class="options-button white touch opacity translate"
+              class="options-button white-text dark-grey touch opacity translate"
               type="submit"
               value="Save"
               id="submit-changes"
             />
             <input
-              class="options-button white touch opacity translate"
+              class="options-button white-text dark-grey touch opacity translate"
               type="reset"
               value="Reset"
             />
@@ -354,7 +354,7 @@
               alt="White penguin in a suit"
             />
           </a>
-          <hr class="vertical-line white" />
+          <hr class="vertical-line light-grey" />
           <div class="text-data-container small-fontsize">
             <p class="translate">Version 1.5</p>
             <p class="translate">10/20/2022</p>
