Change team colors

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   type="text"
                   value="🎉🚩🥳🔥"
                   disabled
-                  class="outline flex align-center white-text grey disabled max-width white text-left"
+                  class="outline flex align-center white-text grey disabled max-width text-left"
                   id="t-message"
                   maxlength="53"
                 />
