--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="flex column">
               <label
                 class="subtitle-option-fontsize translate"
-                for="first-timer"
+                for="second-timer"
                 >2nd timer</label
               >
               <div class="input-form-container flex align-center">
