--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                     min="0"
                     max="99"
                   />
-                  <label for="f-minutes" class="small-fontsize translate"
+                  <label
+                    for="f-minutes"
+                    class="small-fontsize timer-text translate"
                     >Minutes</label
                   >
                 </div>
@@ -179,7 +181,9 @@
                     min="0"
                     max="59"
                   />
-                  <label for="f-seconds" class="small-fontsize translate"
+                  <label
+                    for="f-seconds"
+                    class="small-fontsize timer-text translate"
                     >Seconds</label
                   >
                 </div>
@@ -201,7 +205,9 @@
                     min="0"
                     max="99"
                   />
-                  <label for="s-minutes" class="small-fontsize translate"
+                  <label
+                    for="s-minutes"
+                    class="small-fontsize timer-text translate"
                     >Minutes</label
                   >
                 </div>
@@ -214,7 +220,9 @@
                     min="0"
                     max="59"
                   />
-                  <label for="s-seconds" class="small-fontsize translate"
+                  <label
+                    for="s-seconds"
+                    class="small-fontsize timer-text translate"
                     >Seconds</label
                   >
                 </div>
