Improve general interface

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         >
           15:00
         </div>
-        <div class="submenu flex justify-between align-center">
+        <div class="submenu flex justify-between align-center" id="submenu">
           <button
             class="flex justify-center align-center opacity touch"
             class="white-text flex justify-center align-center opacity touch"
