--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="./css/responsive.css" />
     <script type="module" src="./js/main.js" defer></script>
   </head>
-  <body class="flex column anton max-width max-height overflow-hidden">
+  <body class="flex column anton max-width max-height overflow-hidden black">
     <div
       class="initial-screen max-width max-height absolute light-black"
       id="initial-screen"
@@ -248,7 +248,7 @@
                   id="w-points"
                   value="20"
                   min="1"
-                  max="999"
+                  max="99"
                   type="number"
                 />
                 <label
@@ -279,7 +279,7 @@
                   id="t-points"
                   value="7"
                   min="1"
-                  max="999"
+                  max="99"
                   type="number"
                 />
                 <label
