Adjust notification area

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       id="burger-checkbox"
     />
     <div
-      class="top-container flex justify-center align-center relative black overflow-hidden"
+      class="top-container flex justify-center align-center relative overflow-hidden black"
     >
       <button
         class="reset flex justify-center align-center absolute opacity touch"
