Change message size of total mode

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   type="text"
                   value="🎉🚩🥳🔥"
                   disabled
-                  class="outline flex align-center white-text grey disabled max-width text-left"
+                  class="outline flex align-center white-text grey disabled max-width"
                   id="t-message"
                   maxlength="28"
                 />
